--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
         "vite": "^5.4.8"
     },
     "dependencies": {
+        "@types/matter-js": "^0.19.7",
         "@types/p5": "^1.7.6",
-        "p5": "^1.11.0"
+        "matter-js": "^0.20.0",
+        "p5": "^1.11.0",
+        "poly-decomp-es": "^0.4.2"
     }
 }
