--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
     "private": true,
     "version": "0.0.0",
     "type": "module",
+    "homepage": "https://texiconotmexico.github.io/p5sban/",
     "scripts": {
         "dev": "vite",
         "build": "tsc && vite build",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "deploy": "gh-pages -d dist"
     },
     "devDependencies": {
+        "gh-pages": "^6.2.0",
         "typescript": "^5.5.3",
         "vite": "^5.4.8"
     },
